[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/target_resolver",
    "crates/scanner_tcp",
    "crates/scanner_syn",
    "crates/fingerprint",
    "crates/plugin_host",
    "crates/orchestrator",
    "crates/storage",
    "crates/telemetry",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/vajra-core"
rust-version = "1.75"
authors = ["Vajra Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# CLI
clap = { version = "4.5", features = ["derive"] }
# Networking
pnet = "0.35"
pnet_datalink = "0.35"
pnet_packet = "0.35"
# DNS
trust-dns-resolver = "0.23"
ipnet = "2.6"
# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
# Storage
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
# WASM
wasmtime = "26.0"
# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
regex = "1.10"
async-trait = "0.1"
chrono = "0.4"
governor = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
