[package]
name = "vajra"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vajra"
path = "src/main.rs"

[dependencies]
vajra-common = { path = "../common" }
vajra_scanner_tcp = { path = "../scanner_tcp" }
vajra_scanner_syn = { path = "../scanner_syn" }
vajra_orchestrator = { path = "../orchestrator" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
trust-dns-resolver = { workspace = true }
serde_json = { workspace = true }
vajra-target-resolver = { path = "../target_resolver" }
