[package]
name = "vajra_scanner_syn"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vajra-common = { path = "../common" }
vajra_orchestrator = { path = "../orchestrator" }  
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util"] }
anyhow = { workspace = true }
pnet = { workspace = true }
async-trait = { workspace = true }
thiserror = "1.0"
bytes = "1.5"
dashmap = "5.5"
once_cell = "1.19"
rand = "0.8"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
parking_lot = "0.12"

[features]
default = []
metrics = []
