[package]
name = "vajra_scanner_tcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vajra-common = { path = "../common" }
vajra-fingerprint = { path = "../fingerprint" }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

